[tool.poetry]
name = "binjector"
version = "0.1.9"
description = "Binjector(Binary Injector) makes your text inject into image easily."
authors = ["d3fau1t <aciddust20@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.0.2"
pillow = "10.2.0"
click = "8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
types-pillow = "^10.2.0.20240822"
pytest = "^8.3.4"
twine = "^6.1.0"
commitizen = "^4.2.1"
pre-commit = "^4.1.0"

[tool.poetry.scripts]
binjector = "binjector.cli:cli"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["binjector"]
known_third_party = ["numpy,click,pillow"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.9"
version_files = [
  "pyproject.toml:version"
]
tag_format = "v$version"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
